--- a/www/templates/www/index.html
+++ b/www/templates/www/index.html
@@ -32,15 +32,15 @@
     <div class="row-fluid">
       <div class="col-md-4">
         <h2>开源</h2>
-        <p>We所采用的全部技术均为开源技术。同时，We所有的技术也完全开源，你可以随时从We的<a href="https://github.com/We-Neusoft/We">代码托管站</a>浏览及下载我们全部的文档及源码。
+        <p>We 所采用的全部技术均为开源技术。同时，We 所有的技术也完全开源，你可以随时从 We 的<a href="https://github.com/We-Neusoft">代码托管站</a>浏览及下载我们全部的文档及源码。
       </div>
       <div class="col-md-4">
         <h2>同等</h2>
-        <p>We对所有人均提供完全同等的无偿服务。无论你是否加入We小组，只要是他人在We能得到的服务、技术与支持，你也同样可以无偿的得到。</p>
+        <p>We 对所有人均提供完全同等的无偿服务。无论你是否加入 We 小组，只要是他人在 We 能得到的服务、技术与支持，你也同样可以无偿的得到。</p>
       </div>
       <div class="col-md-4">
         <h2>自由</h2>
-        <p>We·Cloud云技术小组QQ群号为85949649，你可以在里面自由的说出任何想法，提出任何问题，只要在We的能力范围内都将会尽力解答。</p>
+        <p>We·Cloud 云技术小组 QQ 群号为 85949649 ，你可以在里面自由的说出任何想法，提出任何问题，只要在 We 的能力范围内都将会尽力解答。</p>
       </div>
     </div>
   </div>
