--- a/we/templates/we/hero.html
+++ b/we/templates/we/hero.html
@@ -1,8 +1,8 @@
 {% extends "we/base.html" %}
 
 {% block hero %}
-  <header class="container">
-    <div class="jumbotron">
+  <header class="jumbotron">
+    <div class="container">
       <h1>{% block hero_title %}{% endblock %}</h1>
       <p>{% block hero_subtitle %}{% endblock %}
     </div>
