--- a/www/templates/www/index.html
+++ b/www/templates/www/index.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block hero_title %}We · Cloud云技术小组{% endblock %}
-{% block hero_subtitle %}我们只提供专业服务！{% endblock %}
+{% block hero_subtitle %}东软校园内的云服务平台{% endblock %}
 
 {% block content %}
   <div class="container">
@@ -40,7 +40,7 @@
       </div>
       <div class="col-md-4">
         <h2>自由</h2>
-        <p>We·Cloud 云技术小组 QQ 群号为 85949649 ，你可以在里面自由的说出任何想法，提出任何问题，只要在 We 的能力范围内都将会尽力解答。</p>
+        <p>We · Cloud 云技术小组 QQ 群号为 85949649 ，你可以在里面自由的说出任何想法，提出任何问题，只要在 We 的能力范围内都将会尽力解答。</p>
       </div>
     </div>
   </div>
