Added user welcome on navbar.

--- a/dreamspark/templates/dreamspark/download.html
+++ b/dreamspark/templates/dreamspark/download.html
@@ -207,7 +207,7 @@
               <td><a href="http://file.we.neusoft.edu.cn/xCMcZrlgSD6vhHU68gwRCA.we">点此下载</a>
         </table>
         <div id="visual_studio" class="page-header">
-          <h3>Visual Studio</h3>
+          <h3>Visual Studio 2013 / 2012 / 2010</h3>
         </div>
         <table class="table table-hover">
           <thead>
@@ -227,10 +227,6 @@
               <td><a href="http://file.we.neusoft.edu.cn/fH5l8B_pRsmPcdeTrNrxmg.we">点此下载</a>
               <td><a href="http://file.we.neusoft.edu.cn/DzPXskX5SdCPJ6Mmju789A.we">点此下载</a>
             <tr>
-              <td>Visual Studio 2008 团队套装
-              <td><a href="http://file.we.neusoft.edu.cn/R_uzjOXgSu2Qk4hFm7KLWQ.we">点此下载</a>
-              <td><a href="http://file.we.neusoft.edu.cn/e2LJeI7OQauMCJBtj13buA.we">点此下载</a>
-            <tr>
               <td>Team Foundation Server 2013
               <td><a href="http://file.we.neusoft.edu.cn/JUe7-RSFQfud7bpP5QVbZw.we">点此下载</a>
               <td><a href="http://file.we.neusoft.edu.cn/gTDUovAXQv6NVW-rR3j4wQ.we">点此下载</a>
@@ -243,16 +239,29 @@
               <td><a href="http://file.we.neusoft.edu.cn/Nwhn39z3QbuOsSrNEnypQQ.we">点此下载</a>
               <td><a href="http://file.we.neusoft.edu.cn/cH0yup7yQa2X0q-HxS5zTQ.we">点此下载</a>
             <tr>
-              <td>Team Foundation Server 2008
-              <td><a href="http://file.we.neusoft.edu.cn/FFs0mWfKSyOFrvzveJD2CA.we">点此下载</a>
-              <td><a href="http://file.we.neusoft.edu.cn/kFJ3qPooTG-9NzBPgufFQA.we">点此下载</a>
-            <tr>
               <td>Windows Phone SDK 8.0
               <td><a href="http://file.we.neusoft.edu.cn/iznZRi_DTSS9ZVD32a95bQ.we">点此下载</a>
               <td><a href="http://file.we.neusoft.edu.cn/ICpk0tAqRa6JHqGklkP_4g.we">点此下载</a>
         </table>
+        <div id="visual_studio" class="page-header">
+          <h3>Visual Studio 2008</h3>
+        </div>
+        <table class="table table-hover">
+          <thead>
+            <tr><th>软件版本<th>简体中文版<th>英文版
+          </thead>
+          <tbody>
+            <tr>
+              <td>Visual Studio 2008 团队套装
+              <td><a href="http://file.we.neusoft.edu.cn/R_uzjOXgSu2Qk4hFm7KLWQ.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/e2LJeI7OQauMCJBtj13buA.we">点此下载</a>
+            <tr>
+              <td>Team Foundation Server 2008
+              <td><a href="http://file.we.neusoft.edu.cn/FFs0mWfKSyOFrvzveJD2CA.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/kFJ3qPooTG-9NzBPgufFQA.we">点此下载</a>
+        </table>
         <div id="sql_server" class="page-header">
-          <h3>SQL Server</h3>
+          <h3>SQL Server 2012 / 2008 R2 / 2008</h3>
         </div>
         <table class="table table-hover">
           <thead>
@@ -283,13 +292,22 @@
               <td>SQL Server 2008 开发版
               <td><a href="http://file.we.neusoft.edu.cn/fM8DaywPTTyhvWbLUJer-w.we">点此下载</a>
               <td><a href="http://file.we.neusoft.edu.cn/2KG0aeK5QTeW2xepz7VE0g.we">点此下载</a>
+        </table>
+        <div id="sql_server" class="page-header">
+          <h3>SQL Server 2005</h3>
+        </div>
+        <table class="table table-hover">
+          <thead>
+            <tr><th>软件版本<th>简体中文版<th>英文版
+          </thead>
+          <tbody>
             <tr>
               <td>SQL Server 2005 开发版
               <td><a href="http://file.we.neusoft.edu.cn/v0OzaUOcTU6nE8JSF5coYA.we">点此下载</a>
               <td><a href="http://file.we.neusoft.edu.cn/IpWEKg_FRgSekRiLuwaMzQ.we">点此下载</a>
         </table>
         <div id="microsoft_project" class="page-header">
-          <h3>Microsoft Project</h3>
+          <h3>Microsoft Project 2013 / 2010 / 2007</h3>
         </div>
         <table class="table table-hover">
           <thead>
@@ -310,7 +328,7 @@
               <td><a href="http://file.we.neusoft.edu.cn/v7LyLXsSQ6KPcwkc0Vb3Sw.we">点此下载</a>
         </table>
         <div id="microsoft_visio" class="page-header">
-          <h3>Microsoft Visio</h3>
+          <h3>Microsoft Visio 2013 / 2010 / 2007</h3>
         </div>
         <table class="table table-hover">
           <thead>
