--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -20,7 +20,7 @@
 <body {% block body_attributes %}{% endblock %}>
   <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
-      <a class="navbar-brand" href="http://we.neusoft.edu.cn">We · Cloud云技术小组</a>
+      <a class="navbar-brand" href="http://we.neusoft.edu.cn">We · Cloud</a>
       <ul class="nav navbar-nav">
         <li class="{{ nav_www }}"><a href="{% url 'www:index' %}">首页</a>
         <li class="{{ nav_mirror }}"><a href="{% url 'mirror:index' %}">开源镜像站</a>
@@ -30,6 +30,7 @@
       <ul class="nav navbar-nav navbar-right">
 {% block nav_more %}
 {% endblock %}
+        <li><a href="#">{{ username|default:"同学" }}，你好！ <span class="badge">{{ message_count }}</span></a>
       </ul>
     </div>
   </nav>
