Mailbox auth added domain validate.

--- a/dreamspark/templates/dreamspark/signin.html
+++ b/dreamspark/templates/dreamspark/signin.html
@@ -17,8 +17,8 @@
               </div>
               <div class="col-md-6">
                 <select name="domain" class="form-control">
-                  <option>@nou.com.cn</option>
-                  <option>@neusoft.edu.cn</option>
+                  <option value="nou.com.cn">@nou.com.cn</option>
+                  <option value="neusoft.edu.cn">@neusoft.edu.cn</option>
                 </select>
               </div>
             </div>
