--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -30,7 +30,7 @@
       <ul class="nav navbar-nav navbar-right">
 {% block nav_more %}
 {% endblock %}
-        <li><a href="#">{{ username|default:"同学" }}，你好！ <span class="badge">{{ message_count }}</span></a>
+        <li><a href="javascript:void(0)">{{ username|default:"同学" }}，你好！ <span class="badge">{{ message_count }}</span></a>
       </ul>
     </div>
   </nav>
