--- a/dreamspark/templates/dreamspark/signin.html
+++ b/dreamspark/templates/dreamspark/signin.html
@@ -31,7 +31,7 @@
             <div class="form-group">
               <div class="col-md-offset-2 col-md-10">
                 {% if error %}<p class="text-danger">{{ error }}</p>{% endif %}
-                <button type="submit" class="btn btn-primary">登录</button>
+                <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-log-in"></span> 登录</button>
               </div>
             </div>
           </div>
