--- a/dreamspark/templates/dreamspark/signin.html
+++ b/dreamspark/templates/dreamspark/signin.html
@@ -13,7 +13,7 @@
             <div class="form-group">
               <label for="username" class="col-md-2 control-label">邮箱地址</label>
               <div class="col-md-4">
-                <input name="username" type="text" class="form-control" id="username" placeholder="姓名的全拼+13">
+                <input name="username" type="text" class="form-control" id="username" placeholder="姓名的全拼+13" required>
               </div>
               <div class="col-md-6">
                 <select name="domain" class="form-control">
@@ -25,7 +25,7 @@
             <div class="form-group">
               <label for="password" class="col-md-2 control-label">邮箱密码</label>
               <div class="col-md-10">
-                <input name="password" type="password" class="form-control" id="password" placeholder="身份证后6位+手机号码的后4位">
+                <input name="password" type="password" class="form-control" id="password" placeholder="身份证后6位+手机号码的后4位" required>
               </div>
             </div>
             <div class="form-group">
