--- a/we/templates/we/include/js.html
+++ b/we/templates/we/include/js.html
@@ -1,3 +1,4 @@
 {% load staticfiles %}
   <script src="{% static 'js/jquery-1.10.2.min.js' %}"></script>
   <script src="{% static 'js/bootstrap.min.js' %}"></script>
+  <script src="{% static 'js/we.js' %}"></script>
