--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -18,7 +18,7 @@
   <![endif]-->
 </head>
 <body {% block body_attributes %}{% endblock %}>
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+  <nav class="navbar navbar-inverse navbar-fixed-top navbar-fixed-top-we" role="navigation">
     <div class="container">
       <a class="navbar-brand" href="http://we.neusoft.edu.cn">We · Cloud</a>
       <ul class="nav navbar-nav">
