--- a/www/templates/www/include/nav_more.html
+++ b/www/templates/www/include/nav_more.html
@@ -1,4 +1,4 @@
-        <li class="dropdown">
+        <li class="dropdown dropdown-we">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">更多服务&nbsp;<b class="caret"></b></a>
           <ul class="dropdown-menu">
           {% for more_service in more_service_list %}
