--- a/mirror/templates/mirror/include/nav_more.html
+++ b/mirror/templates/mirror/include/nav_more.html
@@ -1,4 +1,4 @@
-        <li class="dropdown">
+        <li class="dropdown dropdown-we">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">配置说明&nbsp;<b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><a href="configurations.we#centos">CentOS</a></li>
