Showing monthly instead totally download on file app.

--- a/file/templates/file/index.html
+++ b/file/templates/file/index.html
@@ -28,7 +28,7 @@
           <div class="panel-body">
             <strong>今日下载：</strong>{{ download.today }} 次<br>
             <strong>一周下载：</strong>{{ download.week }} 次<br>
-            <strong>总共下载：</strong>{{ download.total }} 次
+            <strong>一月下载：</strong>{{ download.month }} 次
           </div>
         </div>
       </div>
