调整超链接中图标与文字顺序。

--- a/dreamspark/templates/dreamspark/index.html
+++ b/dreamspark/templates/dreamspark/index.html
@@ -26,12 +26,12 @@
         <h3>如何获取 DreamSpark 软件？</h3>
       </header>
       <ol>
-        <li>有互联网访问权限的用户，点击<a href="http://e5.onthehub.com/d.ashx?s=jlg1p270bi" target="_blank">这里<span class="glyphicon glyphicon-new-window"></span></a>访问 DreamSpark 商店（境外服务器，访问速度很慢）；
+        <li>有互联网访问权限的用户，点击<a href="http://e5.onthehub.com/d.ashx?s=jlg1p270bi" target="_blank"><span class="glyphicon glyphicon-new-window"></span>这里</a>访问 DreamSpark 商店（境外服务器，访问速度很慢）；
         <li>点击<strong>「开始购物」</strong>链接后，进入登录页面；
         <li>使用学院开设的邮箱进行登录；
         <li>选择需要的产品，加入购物车进行结算（免费）；
         <li>接受许可协议后，即可获得相应产品的密钥。
-        <li><em>你还可以点击<a href="{% url 'dreamspark:download' %}">这里<span class="glyphicon glyphicon-link"></span></a>从校园网高速下载 DreamSpark 软件。</em>
+        <li><em>你还可以点击<a href="{% url 'dreamspark:download' %}"><span class="glyphicon glyphicon-link"></span>这里</a>从校园网高速下载 DreamSpark 软件。</em>
       </ol>
     </section>
   </div>
