--- a/www/templates/www/index.html
+++ b/www/templates/www/index.html
@@ -32,7 +32,7 @@
     <div class="row-fluid">
       <div class="col-md-4">
         <h2>开源</h2>
-        <p>We 所采用的全部技术均为开源技术。同时，We 所有的技术也完全开源，你可以随时从 We 的<a href="https://github.com/We-Neusoft" target="_blank">代码托管站<span class="glyphicon glyphicon-new-window"></span></a>浏览及下载我们全部的文档及源码。
+        <p>We 所采用的全部技术均为开源技术。同时，We 所有的技术也完全开源，你可以随时从 We 的<a href="https://github.com/We-Neusoft" target="_blank"><span class="glyphicon glyphicon-new-window"></span>代码托管站</a>浏览及下载我们全部的文档及源码。
       </div>
       <div class="col-md-4">
         <h2>同等</h2>
