File download added ip based veryfication.

--- a/file/templates/file/file_detail.html
+++ b/file/templates/file/file_detail.html
@@ -29,7 +29,7 @@
       <tr>
         <td rowspan="2"><strong>下载地址</strong>
         <td rowspan="2">
-          <a href="{% url 'file:download' file.id.encode %}" class="btn btn-primary"><span class="glyphicon glyphicon-download-alt"></span> 从 We 下载（{{ file.download_times }} 次）</a>
+          <a href="{% url 'file:download' file.id.encode ip_encode %}" class="btn btn-primary"><span class="glyphicon glyphicon-download-alt"></span> 从 We 下载（{{ file.download_times }} 次）</a>
         <td><strong>MD5</strong>
         <td>{{ file.md5 }}</td>
       <tr>
