--- a/we/templates/we/include/footer.html
+++ b/we/templates/we/include/footer.html
@@ -1,5 +1,6 @@
   <hr />
   <footer class="container">
+    <img src="/common/qr.we" class="qr-footer">
     <!--[if lte IE 8]><span style="filter: FlipH; -ms-filter: "FlipH"; display: inline-block;"><![endif]-->
       <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); -ms-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">&copy;</span>
     <!--[if lte IE 8]></span><![endif]-->
