--- a/mirror/templates/mirror/index.html
+++ b/mirror/templates/mirror/index.html
@@ -38,6 +38,7 @@
     </table>
   </div>
   <div class="container">
-    <img src="traffic.png" />
+    <img src="traffic.png">
+    <img src="storage.png">
   </div>
 {% endblock %}
