--- a/we/templates/we/hero.html
+++ b/we/templates/we/hero.html
@@ -1,7 +1,7 @@
 {% extends "we/base.html" %}
 
 {% block hero %}
-  <header class="jumbotron">
+  <header class="jumbotron jumbotron-we">
     <div class="container">
       <h1>{% block hero_title %}{% endblock %}</h1>
       <p>{% block hero_subtitle %}{% endblock %}
