Upgrade html5 js.

--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -15,6 +15,7 @@
 {% endblock %}
   <!--[if lt IE 9]>
     <script src="{% static 'js/html5shiv.js' %}"></script>
+    <script src="{% static 'js/respond.min.js' %}"></script>
   <![endif]-->
 </head>
 <body {% block body_attributes %}{% endblock %}>
