Adding token auth.

--- a/api/oauth/templates/api/oauth/authorize.html
+++ b/api/oauth/templates/api/oauth/authorize.html
@@ -3,5 +3,6 @@
 {% csrf_token %}
 <input type="text" name="username">
 <input type="password" name="password">
-<input type="submit">
+<input type="submit" name="action" value="Submit">
+<input type="submit" name="action" value="Cancel">
 </form>
