--- a/we/static/css/we.css
+++ b/we/static/css/we.css
@@ -30,6 +30,24 @@ li p {
    text-align: center;
 }
 
-.qr-footer {
-   float: right;
+.qrcode {
+   position: fixed;
+   bottom: 10px;
+   right: 10px;
+}
+
+html, body {
+  height: 100%;
+}
+
+#wrap {
+  min-height: 100%;
+  height: auto;
+  margin: 0 auto -60px;
+  padding: 0 0 60px;
+}
+
+#footer {
+  padding: 10px;
+  background-color: #f5f5f5;
 }
