--- a/apps/file/templates/file/file_detail.html
+++ b/apps/file/templates/file/file_detail.html
@@ -42,7 +42,7 @@
     <ol>
       <li>本文件仅限在<strong>当前 IP 地址（{{ ip }}）</strong>进行无限次数多线程及断点下载；
       <li>在校园有线网环境下载，最高可达到<strong> 100Mbps（约 11.92MB/s）</strong>下载速度；
-      <li><em>下载完成后，请计算文件 CRC32 、 MD5 及 SHA1 值确认文件完整性。</em>
+      <li>下载完成后，请计算文件 CRC32 、 MD5 及 SHA1 值确认文件完整性。
     </ol>
   </div>
 {% endblock %}
