Change group name.

--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -26,7 +26,7 @@
 <div id="wrap">
   <nav class="navbar navbar-inverse navbar-fixed-top navbar-fixed-top-we" role="navigation">
     <div class="container">
-      <a class="navbar-brand" href="http://we.neusoft.edu.cn">We · Cloud</a>
+      <a class="navbar-brand" href="http://we.neusoft.edu.cn">We-Cloud</a>
       <ul class="nav navbar-nav">
 {% for navbar_item in navbar_items %}
         <li{% if active_item == navbar_item.key %} class="active"{% endif %}><a href="{{ navbar_item.url }}">{{ navbar_item.title }}</a>
@@ -53,7 +53,7 @@
     <!--[if lte IE 8]><span style="filter: FlipH; -ms-filter: "FlipH"; display: inline-block;"><![endif]-->
       <span style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); -ms-transform: scaleX(-1); transform: scaleX(-1); display: inline-block;">&copy;</span>
     <!--[if lte IE 8]></span><![endif]-->
-    Copyleft 2008-2014 <a href="mailto:we@nou.com.cn"><span class="glyphicon glyphicon-envelope"></span>We · Cloud 云技术小组</a> All rights reversed.<br />
+    Copyleft 2008-2014 <a href="mailto:we@nou.com.cn"><span class="glyphicon glyphicon-envelope"></span>We-Cloud 维云技术小组</a> All rights reversed.<br />
     感谢大连东软信息学院网络中心提供本小组所有硬件及网络资源。
     </div>
   </footer>
