Change some text in file app.

--- a/apps/file/templates/file/index.html
+++ b/apps/file/templates/file/index.html
@@ -26,9 +26,9 @@
             <h3 class="panel-title">下载统计</h3>
           </div>
           <div class="panel-body">
-            <strong>今日下载：</strong>{{ download.today }} 次<br>
-            <strong>一周下载：</strong>{{ download.week }} 次<br>
-            <strong>一月下载：</strong>{{ download.month }} 次
+            <strong>日统计：</strong>{{ download.today }} 次<br>
+            <strong>周统计：</strong>{{ download.week }} 次<br>
+            <strong>月统计：</strong>{{ download.month }} 次
           </div>
         </div>
       </div>
