--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -57,7 +57,7 @@
     感谢大连东软信息学院网络中心提供本小组所有硬件及网络资源。
     </div>
   </footer>
-  <img src="{% url 'api:qrcode:small' %}" class="qrcode">
+  <img src="{{ qrcode }}" class="qrcode">
 {% if html5 %}
 {% if intranet %}
   <script src="//lib.dongruanyun.com/jquery/jquery2.min.js"></script>
