--- a/apps/www/templates/www/index.html
+++ b/apps/www/templates/www/index.html
@@ -19,7 +19,7 @@
     <form action="https://www.google.com/search" class="form-inline" role="form">
       <input type="hidden" name="hl" value="en" />
       <div class="form-group col-md-offset-2 col-md-6">
-        <input type="text" name="q" class="form-control" placeholder="大连东软信息学院" />
+        <input type="text" id="keywords" name="q" class="form-control" placeholder="大连东软信息学院" />
       </div>
       <div class="form-group">
         <button type="submit" class="btn btn-default">
