--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}{% endblock %} | We-Cloud 维云技术小组 - 东软校园内的云服务平台</title>
 {% if intranet %}
-  <link href="//lib.dongruanyun.com/bootstrap/3/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="//api.neusoft.edu.cn/bootstrap/3/css/bootstrap.min.css" rel="stylesheet" />
 {% else %}
   <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
 {% endif %}
@@ -57,22 +57,22 @@
     感谢大连东软信息学院网络中心提供本小组所有硬件及网络资源。
     </div>
   </footer>
-  <img src="{{ qrcode }}" class="qrcode">
+  <img src="//dev.api.neusoft.edu.cn/qrcode/small" class="qrcode">
 {% if html5 %}
 {% if intranet %}
-  <script src="//lib.dongruanyun.com/jquery/jquery2.min.js"></script>
+  <script src="//api.neusoft.edu.cn/jquery/jquery2.min.js"></script>
 {% else %}
   <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
 {% endif %}
 {% else %}
 {% if intranet %}
-  <script src="//lib.dongruanyun.com/jquery/jquery1.min.js"></script>
+  <script src="//api.neusoft.edu.cn/jquery/jquery1.min.js"></script>
 {% else %}
   <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 {% endif %}
 {% endif %}
 {% if intranet %}
-  <script src="//lib.dongruanyun.com/bootstrap/3/js/bootstrap.min.js"></script>
+  <script src="//api.neusoft.edu.cn/bootstrap/3/js/bootstrap.min.js"></script>
 {% else %}
   <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 {% endif %}
