Changing production parameter.

--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -57,7 +57,7 @@
     感谢大连东软信息学院网络中心提供本小组所有硬件及网络资源。
     </div>
   </footer>
-  <img src="//dev.api.neusoft.edu.cn/qrcode/small" class="qrcode">
+  <img src="{{ open_server }}/qrcode/small" class="qrcode">
 {% if html5 %}
 {% if intranet %}
   <script src="//api.neusoft.edu.cn/jquery/jquery2.min.js"></script>
