Adding tips in file detail page.

--- a/apps/file/templates/file/file_detail.html
+++ b/apps/file/templates/file/file_detail.html
@@ -43,6 +43,7 @@
       <li>本下载地址仅限<strong>当前 IP 地址（{{ ip }}）</strong>进行无限次数多线程及断点下载；
       <li>在校园有线网环境下载，最高可达到<strong> 100Mbps（约 11.92MB/s）</strong>下载速度；
       <li>下载完成后，请计算文件 CRC32 、 MD5 及 SHA1 值确认文件完整性。
+      <li><em>如何你使用带有<strong>镜像搜索</strong>功能的下载工具，请注意选择<strong>仅从原始地址下载</strong>选项，否则可能会降低下载体验。</em>
     </ol>
   </div>
 {% endblock %}
