Adding SQL 2014 links.

--- a/apps/dreamspark/templates/dreamspark/download.html
+++ b/apps/dreamspark/templates/dreamspark/download.html
@@ -261,6 +261,27 @@
               <td><a href="http://file.we.neusoft.edu.cn/kFJ3qPooTG-9NzBPgufFQA.we">点此下载</a>
         </table>
         <div id="sql_server" class="page-header">
+          <h3>SQL Server 2014</h3>
+        </div>
+        <table class="table table-hover">
+          <thead>
+            <tr><th>软件版本<th>32 位简体中文版<th>64 位简体中文版<th>32 位英文版<th>64 位英文版
+          </thead>
+          <tbody>
+            <tr>
+              <td>SQL Server 2014 企业版
+              <td><a href="http://file.we.neusoft.edu.cn/kfwimwQXTj2dUxhXUW4SeA.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/ImAsY-YiROuHR9P1sWO1pw.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/Q_HN_tmDRmGmbZO4jl2Q5A.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/-CI0wghIQ06hmg9Xp9n0_w.we">点此下载</a>
+            <tr>
+              <td>SQL Server 2014 开发版
+              <td><a href="http://file.we.neusoft.edu.cn/uyTujvVwS-2g02q_lQuhdQ.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/-X7LZ5x5SU6ftue3vh0tQw.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/e8SxibriTXG42OlVUBnN0Q.we">点此下载</a>
+              <td><a href="http://file.we.neusoft.edu.cn/uLQJFGVyR2OVRsSXEXWNNw.we">点此下载</a>
+        </table>
+        <div id="sql_server" class="page-header">
           <h3>SQL Server 2012 / 2008 R2 / 2008</h3>
         </div>
         <table class="table table-hover">
