Adding iptv and genuine apps.

--- a/apps/www/templates/www/index.html
+++ b/apps/www/templates/www/index.html
@@ -32,7 +32,7 @@
     <div class="row-fluid">
       <div class="col-md-4">
         <h2>开源</h2>
-        <p>We 所采用的全部技术均为开源技术。同时，We 所有的技术也完全开源，你可以随时从 We 的<a href="https://github.com/We-Neusoft" target="_blank"><span class="glyphicon glyphicon-new-window"></span>代码托管站</a>浏览及下载我们全部的文档及源码。
+        <p>We 所采用的全部技术均为开源技术。同时，We 所有的技术也完全开放，你可以随时从 We 的<a href="https://github.com/We-Neusoft" target="_blank"><span class="glyphicon glyphicon-new-window"></span>代码托管站</a>浏览及下载我们全部的文档及源码。
       </div>
       <div class="col-md-4">
         <h2>同等</h2>
@@ -40,7 +40,7 @@
       </div>
       <div class="col-md-4">
         <h2>自由</h2>
-        <p>We-Cloud 维云技术小组 QQ 群号为 85949649 ，你可以在里面自由的说出任何想法，提出任何问题，只要在 We 的能力范围内都将会尽力解答。</p>
+        <p>We-Cloud 维云技术小组 QQ 群号为 <a href="http://qm.qq.com/cgi-bin/qm/qr?k=72NhrSwt3Nd9SJgGeEIcP-gCh3C7k_YB">85949649</a> ，你可以在里面自由的说出任何想法，提出任何问题，只要在 We 的能力范围内都将会尽力解答。</p>
       </div>
     </div>
   </div>
