--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -17,6 +17,10 @@
 {% block more_css %}
 {% endblock %}
 {% endblock %}
+{% block extra_head %}
+{% block more_head %}
+{% endblock %}
+{% endblock %}
   <!--[if lt IE 9]>
     <script src="{% static 'js/html5shiv.js' %}"></script>
     <script src="{% static 'js/respond.min.js' %}"></script>
