--- a/apps/file/templates/file/file_detail.html
+++ b/apps/file/templates/file/file_detail.html
@@ -23,13 +23,16 @@
         <td colspan="3">{{ file.type }}
       <tr>
         <td><strong>上传日期</strong>
-        <td>{{ file.created|date:'Y 年 n 月 j 日' }}
+        <td>{{ file.created|date:'Y 年 n 月 j 日 H:i' }}
         <td><strong>CRC32</strong>
         <td>{{ file.crc32 }}
       <tr>
         <td rowspan="2"><strong>下载地址</strong>
         <td rowspan="2">
           <a href="{% url 'file:download' file.id.encode %}?key={{ key }}" class="btn btn-primary"><span class="glyphicon glyphicon-download-alt"></span> 从 We 下载（{{ file.download_times }} 次）</a>
+{% if file.mime == "video/mp4" %}
+          <a href="{% url 'file:play' file.id.encode %}" class="btn btn-primary"><span class="glyphicon glyphicon-play"></span> 从 We 在线播放</a>
+{% endif %}
         <td><strong>MD5</strong>
         <td>{{ file.md5 }}
       <tr>
