--- a/apps/mirror/static/mirror/css/we-mirror.css
+++ b/apps/mirror/static/mirror/css/we-mirror.css
@@ -1,21 +1,6 @@
-.table th, .table td {
+.table-mirror th, .table-mirror td {
    text-align: center;
 }
-.table-hover tbody tr td.we-mirror-success {
-   background-color: #3C3;
-}
-.table-hover tbody tr td.we-mirror-error {
-   background-color: #C33;
-}
-.table-hover tbody tr td.we-mirror-info {
-   background-color: #CC3;
-}
-.table-hover tbody tr:hover td.we-mirror-success {
-   background-color: #9C9;
-}
-.table-hover tbody tr:hover td.we-mirror-error {
-   background-color: #C99;
-}
-.table-hover tbody tr:hover td.we-mirror-info {
-   background-color: #CC9;
+.table-mirror > tbody > tr > td {
+   padding: 4px;
 }
