--- a/apps/mirror/templates/mirror/index.html
+++ b/apps/mirror/templates/mirror/index.html
@@ -19,26 +19,39 @@
 
 {% block content %}
   <div class="container">
-    <table class="table table-hover">
-      <thead>
-        <tr><th>源名称</th><th>当前状态</th><th>文件总数量</th><th>文件总大小</th><th>上次同步成功时间</th><th>配置说明</th></tr>
-      </thead>
-      <tbody>
+    <section>
+      <table class="table table-hover table-mirror">
+        <thead>
+          <tr><th>源名称</th><th>文件总数量</th><th>文件总大小</th><th>上次同步成功时间</th><th>当前状态</th><th>配置说明</th></tr>
+        </thead>
+        <tbody>
 {% for result in results %}
-        <tr>
-          <td><a href="{{ result.mirror }}/">{{ result.mirror }}</a></td>
-          <td class="we-mirror-{{ result.style }}">{{ result.status }}</td>
-          <td>{{ result.count }}</td>
-          <td>{{ result.size }}</td>
-          <td>{{ result.timestamp }}</td>
-          <td><a href="configurations.we#{{ result.mirror }}"><i class="glyphicon glyphicon-arrow-right"></i></a></td>
-        </tr>
+          <tr>
+            <td><a href="{{ result.mirror }}/">{{ result.mirror }}</a></td>
+            <td>{{ result.count }}</td>
+            <td>{{ result.size }}</td>
+            <td>{{ result.timestamp }}</td>
+            <td><span class="label label-{{ result.style }}">{{ result.status }}</span></td>
+            <td><a href="configurations.we#{{ result.mirror }}"><i class="glyphicon glyphicon-arrow-right"></i></a></td>
+          </tr>
 {% endfor %}
-      </tbody>
-    </table>
-  </div>
-  <div class="container">
-    <img src="traffic.png">
-    <img src="storage.png">
+        </tbody>
+      </table>
+    </section>
+    <section>
+      <header class="page-header">
+        <h3>教育网镜像站</h3>
+      </header>
+      <ul>
+        <li><strong>东北地区：</strong>东北大学（<a href="http://mirror.neu.edu.cn">IPv4 & IPv6</a>, <a href="http://mirror.neu6.edu.cn">IPv6</a>）、大连理工大学（<a href="http://mirror.dlut.edu.cn">IPv4 & IPv6</a>）、大连东软信息学院（<a href="http://mirrors.neusoft.edu.cn">IPv4</a>）、哈尔滨工业大学（<a href="http://run.hit.edu.cn">IPv4 & IPv6</a>, <a href="http://run.hit6.edu.cn">IPv6</a>）
+        <li><strong>华北地区：</strong>清华大学（<a href="http://mirrors.tuna.tsinghua.edu.cn">IPv4 & IPv6</a>, <a href="http://mirrors.4.tuna.tsinghua.edu.cn">IPv4</a>, <a href="http://mirrors.6.tuna.tsinghua.edu.cn">IPv6</a>）、北京理工大学（<a href="http://mirror.bit.edu.cn">IPv4</a>, <a href="http://mirror.bit6.edu.cn">IPv6</a>）、北京交通大学（<a href="http://mirror.bjtu.edu.cn">IPv4 & IPv6</a>）、天津大学（<a href="http://mirror.tju.edu.cn">IPv4</a>, <a href="http://mirror.tju6.edu.cn">IPv6</a>）
+        <li><strong>华东北地区：</strong>中国科学技术大学（<a href="http://mirrors.ustc.edu.cn">IPv4 & IPv6</a>, <a href="http://mirrors4.ustc.edu.cn">IPv4</a>, <a href="http://mirrors6.ustc.edu.cn">IPv6</a>）
+        <li><strong>华中地区：</strong>华中科技大学（<a href="http://mirrors.hust.edu.cn">IPv4</a>）、中国地质大学（<a href="http://mirrors.cug.edu.cn">IPv4 & IPv6</a>, <a href="http://mirrors.cug6.edu.cn">IPv6</a>）
+        <li><strong>华东南地区：</strong>上海交通大学（<a href="http://ftp.sjtu.edu.cn">IPv4</a>, <a href="http://ftp6.sjtu.edu.cn">IPv6</a>）、浙江大学（<a href="http://mirrors.zju.edu.cn">IPv4 & IPv6</a>）、厦门大学（<a href="http://mirrors.xmu.edu.cn">IPv4 & IPv6</a>, <a href="http://mirrors.xmu6.edu.cn">IPv6</a>）
+        <li><strong>华南地区：</strong>中山大学（<a href="http://mirror.sysu.edu.cn">IPv4</a>）
+        <li><strong>西北地区：</strong>兰州大学（<a href="http://mirror.lzu.edu.cn">IPv4 & IPv6</a>）
+        <li><strong>西南地区：</strong><em>暂无收录</em>
+      </ul>
+    </section>
   </div>
 {% endblock %}
