--- a/apps/file/templates/file/file_play.html
+++ b/apps/file/templates/file/file_play.html
@@ -2,12 +2,23 @@
 
 {% block title %}播放 {{ file.name }}{% endblock %}
 
+{% block more_css %}
+  <link href="//lib.hub.neusoft.edu.cn/video-js/video-js.css" rel="stylesheet" />
+{% endblock %}
+
+{% block more_head %}
+  <script src="//lib.hub.neusoft.edu.cn/video-js/video.js"></script>
+  <script>
+    videojs.options.flash.swf = "http://lib.hub.neusoft.edu.cn/video-js/video-js.swf";
+  </script> 
+{% endblock %}
+
 {% block content %}
   <div class="container">
     <div class="page-header">
       <h3>正在播放：{{ file.name }} （上传于 {{ file.created|date:'Y 年 n 月 j 日 H:i' }}） <a href="download.we" class="btn btn-primary"><span class="glyphicon glyphicon-download-alt"></span> 下载</a></h3>
     </div>
-    <video width="1280" height="720" controls>
+    <video width="854" height="480" controls class="video-js vjs-default-skin vjs-big-play-centered" data-setup="{}">
       <source src="http://play.we.neusoft.edu.cn/{{ path }}" type="video/mp4">
     </video>
     <div>播放体验取决于连接速率、浏览器兼容性及显卡驱动程序设置等综合因素，如无法流畅播放，请先下载后再观看。</div>
