--- a/we/templates/we/base.html
+++ b/we/templates/we/base.html
@@ -8,9 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %}{% endblock %} | We-Cloud 维云技术小组 - 东软校园内的云服务平台</title>
 {% if intranet %}
-  <link href="//lib.api.neusoft.edu.cn/bootstrap/3/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="//lib.hub.neusoft.edu.cn/bootstrap/latest/css/bootstrap.min.css" rel="stylesheet" />
 {% else %}
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" />
 {% endif %}
   <link href="{% static 'css/we.css' %}" rel="stylesheet" />
 {% block extra_css %}
@@ -64,21 +64,21 @@
   <img src="{{ open_server }}/qrcode/small" class="qrcode">
 {% if html5 %}
 {% if intranet %}
-  <script src="//lib.api.neusoft.edu.cn/jquery/jquery2.min.js"></script>
+  <script src="//lib.hub.neusoft.edu.cn/jquery/jquery-latest.min.js"></script>
 {% else %}
-  <script src="//code.jquery.com/jquery-2.1.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
 {% endif %}
 {% else %}
 {% if intranet %}
-  <script src="//lib.api.neusoft.edu.cn/jquery/jquery1.min.js"></script>
+  <script src="//lib.hub.neusoft.edu.cn/jquery/jquery.min.js"></script>
 {% else %}
-  <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 {% endif %}
 {% endif %}
 {% if intranet %}
-  <script src="//lib.api.neusoft.edu.cn/bootstrap/3/js/bootstrap.min.js"></script>
+  <script src="//lib.hub.neusoft.edu.cn/bootstrap/latest/js/bootstrap.min.js"></script>
 {% else %}
-  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 {% endif %}
 
   <script src="{% static 'js/we.js' %}"></script>
